# squeal-postgresql-qq

./: README.md  cabal.project  cabal.project.freeze  changelog.md  fourmolu.yaml  squeal-postgresql-qq.cabal  squeal-postresql-qq.cabal
.github/workflows/: haskell.yml
src/Squeal/: QuasiQuotes.hs
src/Squeal/QuasiQuotes/: Common.hs  Delete.hs  Insert.hs  MonoRow.hs  Query.hs  RowType.hs  Update.hs
test/: test.hs
