cabal-version:       3.0
name:                squeal-postgresql-qq
version:             0.1.0.0
synopsis:            QuasiQuoter transforming raw sql into Squeal expressions.
-- description:         
homepage:            https://github.com/owensmurray/squeal-postgresql-qq
license:             MIT
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2022 Rick Owens
-- category:            
build-type:          Simple
extra-source-files:
  README.md
  LICENSE

common dependencies
  build-depends:
    , base              >= 4.15     && < 4.20
    , generics-sop      >= 0.5.1.2  && < 0.6
    , simple-sql-parser >= 0.6.0    && < 0.7
    , squeal-postgresql >= 0.9.0.0  && < 0.10
    , template-haskell  >= 2.17.0.0 && < 2.22
    , text              >= 1.2.5.0  && < 2.2
    , uuid              >= 1.3.15   && < 1.4

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall

library
  import: dependencies, warnings
  exposed-modules:     
    Squeal.QuasiQuotes
  other-modules:       
    Squeal.QuasiQuotes.Query
    Squeal.QuasiQuotes.RowType
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  import: dependencies, warnings
  main-is: test.hs
  other-modules:
    Squeal.QuasiQuotes
    Squeal.QuasiQuotes.Query
    Squeal.QuasiQuotes.RowType
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  default-language: Haskell2010
  build-depends:
    , hspec >= 2.8.5 && < 2.12

